--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
   <li>Travelling</li>
 </ol>
 <h3>Contact Details</h3>
-<a href="Contact-me.html">Contact me</a>
+<a href="contact-me.html">contact me</a>
   </body>
 </html>
